[package]
name = "substack_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = "0.6.2"
derive = "1.0.0"
env_logger = "0.10.0"
fancy-regex = "0.10.0"
features = "0.10.0"
fs-err = "2.9.0"
futures = "0.3.25"
html2text = "0.4.4"
log = "0.4.17"
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["json"] }
scraper = "0.14.0"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
voca_rs = "1.15.2"
